[tool.poetry]
name = "crude-twitch-viewer-bot"
version = "0.1.2"
description = "Twitch live viewer bot with playwright. Spawns low-resolution muted Chrome instances with proxy & user-agent. Requires HTTP proxies."
authors = ["jlplenio <jan-lukas@plen.io>"]

[tool.poetry.dependencies]
python = "^3.8"
playwright = "^1.22.0"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
