[tool.poetry]
name = "cvamp"
version = "0.7.5"
description = "Viewer Amplifier bot with playwright. Spawns low-resolution muted Chrome instances with proxy & user-agent. Requires HTTP proxies."
authors = ["KevinBytesTheDust <kevin@blueloperlabs.ch>"]

[tool.poetry.dependencies]
python = "^3.11.0, <3.12"
playwright = "1.43.0"
psutil = "^5.9.0"
toml = "^0.10.2"
sv-ttk = "^0.1"
pytest = "^7.1.2"
black = "23.3.0"
pylint = "^2.15.4"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pyinstaller = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
